--- a/index.html
+++ b/index.html
@@ -72,24 +72,29 @@
       background-color: #2ecc71;
     }
 
+    /* Style for the navbar */
     .navbar {
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      align-items: center; /* Vertically center the content */
       background-color: #34495e;
       padding: 10px;
-      margin-bottom: 10px; /* Add margin at the bottom for spacing */
     }
 
     .navbarButton {
+      flex-grow: 1; /* Allow buttons to grow and use the full width */
       background: none;
       border: none;
       outline: none;
-      padding: 5px;
+      margin: 0;
+      padding: 10px; /* Increase padding for a larger button */
+      box-shadow: none;
+      border-radius: 8px;
+      font-size: 18px; /* Increase font size for a larger button text */
+      transition: background-color 0.3s;
     }
 
     .navbarIcon {
-      margin-bottom: 10px;
       border-radius: 8px;
       padding: 8px;
       background-color: #2980b9;
@@ -112,6 +117,19 @@
 
     .button.red:hover {
       background-color: #c0392b;
+    }
+
+    /* Add styles for the header */
+    header {
+      background-color: #34495e;
+      padding: 10px;
+      border-bottom: 2px solid #2c3e50; /* Add a border at the bottom for distinction */
+    }
+
+    h1 {
+      color: #fff;
+      margin: 0;
+      font-size: 24px;
     }
 
     @media (max-width: 600px) {
@@ -138,11 +156,13 @@
 
 <div class="container">
   <!-- Page Title -->
-  <h1>Car Control</h1>
+  <header>
+    <h1>Car Control</h1>
+  </header>
 
   <!-- Lock/Unlock Button -->
   <button id="lockUnlockButton" class="button" onclick="toggleLockUnlock()">
-    <i class="icon fas fa-car"></i> <b>Lock / Unlock Car</b>
+    <i class="icon fas fa-key"></i> <b>Lock / Unlock Car</b>
     <div class="buttonDescription">Toggle the lock status of the car</div>
   </button>
 
@@ -254,6 +274,7 @@
 
 <!-- JavaScript Section -->
 <script>
+
   // Variable to track the door state (locked or unlocked)
   var doorState = 0;
 
