--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       font-family: Arial, sans-serif;
       text-align: center;
       margin: 20px auto;
-      background-color: #ecf0f1; /* Set the background color to a light gray */
+      background-color: #bcc0c0; /* Set the background color to a light gray */
     }
 
     h1 {
@@ -23,10 +23,10 @@
     }
 
     .container {
-      background-color: #fff; /* Set the container background color to white */
+      background-color: #6c7a89; /* Set the container background color to gray-blue */
       max-width: 350px;
       margin: 0 auto;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow */
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.3); /* Increase the shadow size and darkness */
     }
 
     .button {
